--- a/Ausarbeitung/Heuristiken.tex
+++ b/Ausarbeitung/Heuristiken.tex
@@ -44,4 +44,4 @@ Um nun aus dem Gedächtnis eine neue Konfiguration $x^*$ zu lernen wird das gewi
 
 In der ersten Variante wird die Parkfläche in vier äquidistante Abschnitte unterteilt. Jeder der Abschnitte erhält ein Gewicht, wobei Abschnitte ein größeres Gewicht erhalten wenn sie näher am Ziel liegen. Die gelernte Konfiguration tendiert dann stärker in Richtung derer, mit deren Hilfe bessere Parkplätze gefunden wurden. Dieser Effekt ist bei entsprechend großen Gewichtsdifferenzen zwischen den Quadranten am Größten. Liegen jedoch hauptsächlich oder nur Konfigurationen mit dem gleichen Gewicht vor verläuft das Lernen langsamer. 
 
-Um solche starken Sprünge in der Lerngeschwindigkeit zu vermeiden und um eine bessere Differenzierung zwischen den Parkplätzen nahe des Ziels zu gewährleisten wird in der hier durchgeführten Simulation jedem Parkplatz eine individuelle Gewichtung zugeordnet. Die Gewichte betragen jeweils den Kehrwert der Entfernung des Parkplatzes zum Ziel. Der ideale Parkplatz direkt vor dem Ziel und mit Entfernung $0$ erhält das Gewicht $2$. Konfigurationen, mit denen in der Nähe des Ziels geparkt wurde, werden so wesentlich stärker gewichtet als diese, mit denen ein Parkplatz mit größerer Entfernung erreicht wurde. Gleichzeitig sind die Gewichte für die besten Parkplätze die mit den größten Differenzen zu ihren Vorgängern und Nachfolgern, womit eine hohe Lerngeschwindigkeit auch unter ähnlich guten Konfigurationen eintritt. 
+Um solche starken Sprünge in der Lerngeschwindigkeit zu vermeiden und um eine bessere Differenzierung zwischen den Parkplätzen nahe des Ziels zu gewährleisten wird in der hier durchgeführten Simulation jedem Parkplatz eine individuelle Gewichtung zugeordnet. Die Gewichte betragen jeweils den Kehrwert der Entfernung des Parkplatzes zum Ziel. Der ideale Parkplatz mit Entfernung $0$ erhält das Gewicht $2$. Konfigurationen, mit denen in der Nähe des Ziels geparkt wurde, werden so wesentlich stärker gewichtet als diese, mit denen ein Parkplatz mit größerer Entfernung erreicht wurde. Gleichzeitig sind die Gewichte für die besten Parkplätze die mit den größten Differenzen zu ihren Vorgängern und Nachfolgern, womit eine hohe Lerngeschwindigkeit auch unter ähnlich guten Konfigurationen eintritt. 
